# MCP_Investment_depoly

./: MANIFEST.in  README.md  main.py  pyproject.py  setup.cfg  setup.py  web_app.py
portfolio_server/: server.py  sse.py
scripts/: deploy.sh  status.sh  stop.sh
static/: index.html
