[metadata]
name = mcp-investment-portfolio
version = attr:  portfolio_server.__version__

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
include_package_data = True

[options.packages. find]
exclude =
    tests
    tests.*
    docs

[options.extras_require]
dev =
    flake8>=6.0.0
    pylint>=2.17.0
    black>=23.0.0
    pytest>=7.0.0
    pytest-cov>=4.0.0
lint =
    flake8>=6.0.0
    pylint>=2.17.0

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist,*.egg-info,.venv,venv
ignore = E501,W503

[pylint]
max-line-length = 120

[tool: pytest]
testpaths = tests
python_files = test_*.py