[metadata]
name = mcp-investment-portfolio
version = 0.1.0
description = A Model Context Protocol (MCP) server for managing investment portfolios

[options]
packages = find: 
python_requires = >=3.6
include_package_data = True

[options.packages.find]
exclude =
    tests
    tests.*
    docs

[flake8]
max-line-length = 120
exclude = . git,__pycache__,build,dist,*.egg-info,. venv,venv
ignore = E501,W503